cmake_minimum_required(VERSION 3.17)
project(examples)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS true)

include_directories(".")

add_executable(first first.cpp)
add_executable(config_file_types config_file_types.cpp)
add_executable(option_groups option_groups.cpp)
add_executable(real real.cpp)
add_executable(custom_syntax custom_syntax.cpp)
add_executable(options_description options_description.cpp)
add_executable(regex regex.cpp)
add_executable(env_options env_options.cpp)
add_executable(multiple_sources multiple_sources.cpp)
add_executable(options_heirarchy options_heirarchy.cpp)
add_executable(response_file response_file.cpp)

target_link_libraries(config_file_types libprogopt)
target_link_libraries(first libprogopt)
target_link_libraries(option_groups libprogopt)
target_link_libraries(real libprogopt)
target_link_libraries(custom_syntax libprogopt)
target_link_libraries(options_description libprogopt)
target_link_libraries(regex libprogopt)
target_link_libraries(env_options libprogopt)
target_link_libraries(multiple_sources libprogopt)
target_link_libraries(options_heirarchy libprogopt)
target_link_libraries(response_file libprogopt)
