
add_executable(first first.cpp)
add_executable(config_file_types config_file_types.cpp)
add_executable(custom_syntax custom_syntax.cpp)
add_executable(env_options env_options.cpp)
add_executable(multiple_sources multiple_sources.cpp)
add_executable(option_groups option_groups.cpp)
add_executable(options_description options_description.cpp)
add_executable(options_heirarchy options_heirarchy.cpp)
add_executable(real real.cpp)
add_executable(regex regex.cpp)
add_executable(response_file response_file.cpp)

target_link_libraries(first ${LIBRARY_NAME})
target_link_libraries(config_file_types ${LIBRARY_NAME})
target_link_libraries(custom_syntax ${LIBRARY_NAME})
target_link_libraries(env_options ${LIBRARY_NAME})
target_link_libraries(multiple_sources ${LIBRARY_NAME})
target_link_libraries(option_groups ${LIBRARY_NAME})
target_link_libraries(options_description ${LIBRARY_NAME})
target_link_libraries(options_heirarchy ${LIBRARY_NAME})
target_link_libraries(real ${LIBRARY_NAME})
target_link_libraries(regex ${LIBRARY_NAME})
target_link_libraries(response_file ${LIBRARY_NAME})
